k8s/apps/monitoring/grafana-tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ts-grafana
  namespace: monitoring
  annotations:
    tailscale.com/hostname: grafana
    tailscale.com/proxy-group: ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kube-prometheus-stack-grafana
      port:
        number: 80
  tls:
    - hosts:
        - grafana
